# custom-accel

./: README.md  com.github.yinonburgansky.CustomAccel.json  io.github.yinonburgansky.CustomAccel.json  meson.build
data/: com.github.yinonburgansky.CustomAccel.desktop.in  com.github.yinonburgansky.CustomAccel.gschema.xml  com.github.yinonburgansky.CustomAccel.metainfo.xml.in  com.github.yinonburgansky.CustomAccel.service.in  io.github.yinonburgansky.CustomAccel.desktop.in  io.github.yinonburgansky.CustomAccel.gschema.xml  io.github.yinonburgansky.CustomAccel.metainfo.xml.in  io.github.yinonburgansky.CustomAccel.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: apply-accel-settings-dialog.c  apply-accel-settings-dialog.h  apply-accel-settings-dialog.ui  bezier-curve.c  custom-accel-application.c  custom-accel-application.h  custom-accel-window.c  custom-accel-window.h  custom-accel-window.ui  custom-accel.gresource.xml  device-manager.c  device-manager.h  main.c  meson.build  plot-widget.c  plot-widget.h  x11-accel-settings-manager.c
